P01/Tests/SyntaxErrors/statenames1.tm
states 4
I
A -
B +
alphabet 2 0 1

